--- a/CashJobSite.Web/packages.config
+++ b/CashJobSite.Web/packages.config
@@ -8,6 +8,7 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="3.1.0" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.15.1" targetFramework="net452" />
+  <package id="MediatR" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
