--- a/CashJobSite.Application/CashJobSite.Application.csproj
+++ b/CashJobSite.Application/CashJobSite.Application.csproj
@@ -62,6 +62,8 @@
     <Compile Include="JobService.cs" />
     <Compile Include="Logging\Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queries\GetJobByIdQuery.cs" />
+    <Compile Include="QueryHandlers\GetJobByIdQueryHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CashJobSite.Data\CashJobSite.Data.csproj">
